@@ -1,0 +1,12 @@
+﻿namespace SmartPlate.API.Dto.Cars
+{
+    public class CarForSimpleDetailsDto
+    {
+        public int Id { get; set; }
+
+        public string PlateNumber { get; set; }
+
+        public bool LicenseIsValid { get; set; }
+
+    }
+}
